fix spacing bug with popover titles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -394,6 +394,10 @@ div#header-home img#sublogo{
     margin-top:-20px;
 }
 
+.store-side .span4 h3.popover-title{
+    margin-top: 0px;
+}
+
 .store-side form.shipping{
     text-align: left;
     margin: 0px;
